fixed alignment on login section. fixed distance between inputs on the same line. made banner logo and title larger. added email and phone number inputs. adjusted color of inspirational quote's background.

--- a/src/style.css
+++ b/src/style.css
@@ -43,27 +43,23 @@ a {
   background: rgba(0, 0, 0, 0.5);
   font-family: 'MyFont', 'Brush Script MT (cursive)';
   position: absolute;
-  top: 100px;
-  font-size: 5rem;
+  top: 10rem;
+  font-size: 7rem;
   width: 100%;
 }
 
 #logo {
-  width: 5rem;
-  height: 5rem;
+  width: 6rem;
+  height: 6rem;
 }
 
 
 #img-source {
   position: absolute;
-  bottom: 5px;
+  bottom: 0.5rem;
   font-size: 1.5rem;
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
-}
-
-p {
-  margin: 0.8rem;
 }
 
 #inspirational-quote {
@@ -72,7 +68,7 @@ p {
   justify-content: flex-end;
   height: 35vh;
   padding: 10px;
-  background-color: rgb(231, 220, 220);
+  background-color: rgba(207, 207, 207, 0.185);
   font-size: 1.5rem;
   font-weight: bold;
 }
@@ -91,6 +87,11 @@ label,input{
 
 ul {
   display: flex;
-  justify-content: space-between;
+  gap: 3rem;
   list-style-type: none;
+  padding: 0;
+}
+
+#inspirational-quote, #sign-up-form {
+  padding-left: 3rem;
 }
